# CLI

./: pyproject.toml
ctfo04/: __main__.py
